--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <html lang="en">
  <title>Мой первый сайт</title>
  <div>
-<print>Разберёмся с разбаловокой на 2024 год.</print></head>
+<print>Разберёмся с разбаловкой на 2024 год.</print></head>
 <div>
     <table>
         <tr>
