--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="/image/logo.jpg" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="static / styles / style.css" />
 
     <title>Сайт про подготовку к ОГЭ по информатике</title>
 
