--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <button type="submit"><i class="fa fa-search"></i></button>
           </form>
           <ul id="menu">
-            <li><a href="">Блог</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Об авторе</a></li>
+            <li><a href="">Информация об экзамене</a></li>
+            <li><a href="">Варианты</a></li>
+            <li><a href="">Рекомендуемые сборники</a></li>
           </ul>
         </nav>
       </header>
