--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
 <body>
     <header>
         <nav class="container">
-          <a class="logo" href="ior/loggl.PNG">
-            <span>L</span>
-            <span>O</span>
-            <span>G</span>
-            <span>O</span>
+          <a class="logo" href="ior/loggl.PNG"
           </a>
           <div class="nav-toggle"><span></span></div>
           <form action="" method="get" id="searchform">
